build/log/idf_py_stdout_output_172065
[1/16] Linking C static library esp-idf/espressif__esp_websocket_client/libespressif__esp_websocket_client.a
[2/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[3/16] Performing build step for 'bootloader'
[1/1] cd /home/ubuntu/esp/proj/ai_audio/build/bootloader/esp-idf/esptool_py && /home/ubuntu/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/ubuntu/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/ubuntu/esp/proj/ai_audio/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[4/16] No install step for 'bootloader'
[5/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_driver.c.obj
[6/16] Completed 'bootloader'
[7/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/audio/Speaker_driver.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/audio/Speaker_driver.c.obj 
/home/ubuntu/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ubuntu/esp/proj/ai_audio/build/config -I/home/ubuntu/esp/proj/ai_audio/main -I/home/ubuntu/esp/proj/ai_audio/main/audio -I/home/ubuntu/esp/proj/ai_audio/main/wifi -I/home/ubuntu/esp/proj/ai_audio/main/websocket -I/home/ubuntu/esp/esp-idf/components/newlib/platform_include -I/home/ubuntu/esp/esp-idf/components/freertos/config/include -I/home/ubuntu/esp/esp-idf/components/freertos/config/include/freertos -I/home/ubuntu/esp/esp-idf/components/freertos/config/xtensa/include -I/home/ubuntu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ubuntu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ubuntu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/ubuntu/esp/esp-idf/components/freertos/esp_additions/include -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/include -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/dma/include -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/ubuntu/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/heap/include -I/home/ubuntu/esp/esp-idf/components/heap/tlsf -I/home/ubuntu/esp/esp-idf/components/log/include -I/home/ubuntu/esp/esp-idf/components/soc/include -I/home/ubuntu/esp/esp-idf/components/soc/esp32s3 -I/home/ubuntu/esp/esp-idf/components/soc/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/soc/esp32s3/register -I/home/ubuntu/esp/esp-idf/components/hal/platform_port/include -I/home/ubuntu/esp/esp-idf/components/hal/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/hal/include -I/home/ubuntu/esp/esp-idf/components/esp_rom/include -I/home/ubuntu/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/ubuntu/esp/esp-idf/components/esp_rom/esp32s3 -I/home/ubuntu/esp/esp-idf/components/esp_common/include -I/home/ubuntu/esp/esp-idf/components/esp_system/include -I/home/ubuntu/esp/esp-idf/components/esp_system/port/soc -I/home/ubuntu/esp/esp-idf/components/esp_system/port/include/private -I/home/ubuntu/esp/esp-idf/components/xtensa/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/xtensa/include -I/home/ubuntu/esp/esp-idf/components/xtensa/deprecated_include -I/home/ubuntu/esp/esp-idf/components/lwip/include -I/home/ubuntu/esp/esp-idf/components/lwip/include/apps -I/home/ubuntu/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ubuntu/esp/esp-idf/components/lwip/lwip/src/include -I/home/ubuntu/esp/esp-idf/components/lwip/port/include -I/home/ubuntu/esp/esp-idf/components/lwip/port/freertos/include -I/home/ubuntu/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ubuntu/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ubuntu/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ubuntu/esp/esp-idf/components/esp_driver_gpio/include -I/home/ubuntu/esp/esp-idf/examples/peripherals/i2s/i2s_examples_common -I/home/ubuntu/esp/esp-idf/components/driver/deprecated -I/home/ubuntu/esp/esp-idf/components/driver/i2c/include -I/home/ubuntu/esp/esp-idf/components/driver/touch_sensor/include -I/home/ubuntu/esp/esp-idf/components/driver/twai/include -I/home/ubuntu/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/esp_pm/include -I/home/ubuntu/esp/esp-idf/components/esp_ringbuf/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_pcnt/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_gptimer/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_spi/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_i2s/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/ubuntu/esp/esp-idf/components/sdmmc/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_sdspi/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_sdio/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_dac/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_rmt/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_tsens/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_sdm/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_i2c/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_uart/include -I/home/ubuntu/esp/esp-idf/components/vfs/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_ledc/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_parlio/include -I/home/ubuntu/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/ubuntu/esp/esp-idf/components/esp_wifi/include -I/home/ubuntu/esp/esp-idf/components/esp_wifi/include/local -I/home/ubuntu/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ubuntu/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/ubuntu/esp/esp-idf/components/esp_event/include -I/home/ubuntu/esp/esp-idf/components/esp_phy/include -I/home/ubuntu/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/ubuntu/esp/esp-idf/components/esp_netif/include -I/home/ubuntu/esp/esp-idf/components/nvs_flash/include -I/home/ubuntu/esp/esp-idf/components/esp_partition/include -I/home/ubuntu/esp/proj/ai_audio/managed_components/espressif__esp_websocket_client/include -I/home/ubuntu/esp/esp-idf/components/esp-tls -I/home/ubuntu/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/ubuntu/esp/esp-idf/components/mbedtls/port/include -I/home/ubuntu/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/ubuntu/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/ubuntu/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/ubuntu/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/ubuntu/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/ubuntu/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/ubuntu/esp/esp-idf/components/tcp_transport/include -I/home/ubuntu/esp/esp-idf/components/esp_timer/include -I/home/ubuntu/esp/esp-idf/components/http_parser -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ubuntu/esp/proj/ai_audio=. -fmacro-prefix-map=/home/ubuntu/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/audio/Speaker_driver.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/audio/Speaker_driver.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/audio/Speaker_driver.c.obj -c /home/ubuntu/esp/proj/ai_audio/main/audio/Speaker_driver.c
/home/ubuntu/esp/proj/ai_audio/main/audio/Speaker_driver.c: In function 'spk_write':
/home/ubuntu/esp/proj/ai_audio/main/audio/Speaker_driver.c:46:9: error: implicit declaration of function 'ESP_LOGE'; did you mean 'ESP_OK'? [-Wimplicit-function-declaration]
   46 |         ESP_LOGE(TAG,"SPEAKER 写入失败：%s",esp_err_to_name(ret));
      |         ^~~~~~~~
      |         ESP_OK
/home/ubuntu/esp/proj/ai_audio/main/audio/Speaker_driver.c:49:9: error: implicit declaration of function 'ESP_LOGW'; did you mean 'ESP_OK'? [-Wimplicit-function-declaration]
   49 |         ESP_LOGW(TAG,"写入0字节");
      |         ^~~~~~~~
      |         ESP_OK
[8/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/audio/Mic_driver.c.obj
[9/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi/wifi_connect.c.obj
ninja: build stopped: subcommand failed.
